# litestar-meals

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
demo/: test.py  test2.py  test22.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.vue  axios.js  main.js
frontend/src/components/: AddMealForm.vue  Alert.vue  AlertMessage.vue  ModalDialog.vue  TheFooter.vue  TheHeader.vue  TheTestHeader.vue
frontend/src/components/forms/: AutoCompleteField.vue  (+5 more)
frontend/src/directives/: clickOutside.js
frontend/src/router/: index.js
frontend/src/stores/: auth.js  user.js
frontend/src/utils/: cookie.js
frontend/src/views/: AboutView.vue  FeedbackView.vue  HomeView.vue  LoginView.vue  ProductsView.vue  ProfileView.vue  RegisterView.vue  RegisteredView.vue
src/: app.py
src/api/: __init__.py  dependencies.py  meal.py  user.py  user_meal.py
src/config/: alchemy.py  cors.py  csrf.py  settings.py  users.py
src/core/: dependencies.py
src/core/auth/: jwt.py
src/core/database/: alchemy.py  sqlalchemy.py
src/core/dependencies/: dependencies.py
src/core/errors/: handlers.py  sentry.py
src/core/models/: base.py
src/core/schemas/: base_model.py
src/core/utils/: dependencies.py
src/docs/: commands.md
src/features/meal/: dependencies.py
src/lib/: database.py  exceptions.py  jwt.py  sentry.py  settings.py  users.py
src/models/: __init__.py  meal.py  meal_brand.py  meal_store.py  user.py  user_meal.py
src/schemas/: user.py
src/server/: dependencies.py  plugins.py  routes.py
(+51 files in other folders)
